--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 #make gtnh shut up about git
 #gtnh.modules.gitVersion=false
-modVersion = 0.0.0.1
+#modVersion = 0.0.0.1
 
 
 #make gtnh shut up about spotless.gradle not being present, despite below disabling it
