remove: tell Spotless hands off the recipes..and disable spotless entirely.

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@
 
 
 #make gtnh shut up about spotless.gradle not being present, despite below disabling it
-#gtnh.modules.codeStyle=false
+gtnh.modules.codeStyle=false
 
 # ExampleMod tag to use as Blowdryer (Spotless, etc.) settings version, leave empty to disable.
 # LOCAL to test local config updates.
